@@ -16,9 +16,11 @@ initOptionsActions <- function(playState)
             ## detect default for time.mode based on data
             dat <- try(xyData(playState, space="packet 1"), silent = TRUE)
             playState$time.mode <-
-                (inherits(dat$x, "ts") ||
-                 inherits(dat$x, "zoo") ||
-                 is.somesortoftime(dat$x))
+                (is.list(dat) &&
+                 (inherits(dat$x, "ts") ||
+                  inherits(dat$x, "zoo") ||
+                  is.somesortoftime(dat$x))
+                 )
             ## once only ## TODO: better to wait for manual switch
             playState$.args$missing_time.mode <- FALSE
         } else {
